TestSuite/errors/err0538.pas
//!Повторно объявленный идентификатор name
type
  name = (name);

begin
  // Ожидался тип
  var v1: name;
end.